# Tp3_tools

./: LICENSE  README.md
RawAnalysis/: Poisson_distribution.py  gain_raw.py  ht_raw.py  laser_arrival.py  open_raw.py  spim_analysis.ipynb  temp.tpx3  tpx2txt.cpp
RawAnalysis/FromTP3/: tdc_check_000000.tpx3  tdc_check_000001.tpx3  tdc_check_000002.tpx3  tdc_check_000003.tpx3  tdc_check_000004.tpx3
TCPDummyServer/: simpleServer.py
TCPFiletoStream/: connect_to_Rust.py  connect_to_Tp3.py  receiveServer.py  streamServer.py
TCPFiletoStream/Files_00/: tdc_check_000001.tpx3  tdc_check_000002.tpx3  tdc_check_000004.tpx3  tdc_check_000006.tpx3  tdc_check_000007.tpx3  tdc_check_000010.tpx3  tdc_check_000012.tpx3  tdc_check_000013.tpx3  tdc_check_000017.tpx3  tdc_check_000018.tpx3  tdc_check_000020.tpx3  tdc_check_000021.tpx3  tdc_check_000024.tpx3  tdc_check_000025.tpx3  tdc_check_000026.tpx3  tdc_check_000031.tpx3  tdc_check_000033.tpx3  tdc_check_000034.tpx3  tdc_check_000039.tpx3  tdc_check_000040.tpx3  tdc_check_000041.tpx3  tdc_check_000043.tpx3  tdc_check_000044.tpx3  tdc_check_000046.tpx3  tdc_check_000047.tpx3  tdc_check_000048.tpx3  tdc_check_000049.tpx3  tdc_check_000053.tpx3  tdc_check_000054.tpx3  tdc_check_000055.tpx3  tdc_check_000056.tpx3  tdc_check_000058.tpx3  tdc_check_000059.tpx3  tdc_check_000064.tpx3  tdc_check_000065.tpx3  tdc_check_000066.tpx3  tdc_check_000067.tpx3  tdc_check_000071.tpx3  tdc_check_000073.tpx3  tdc_check_000075.tpx3  (+238 more)
TCPFiletoStream/tdc_data_100ms/: raw000000.tpx3  raw000003.tpx3  raw000004.tpx3  raw000005.tpx3  raw000006.tpx3  raw000007.tpx3  raw000008.tpx3  raw000009.tpx3  raw000010.tpx3  raw000011.tpx3  raw000012.tpx3  raw000013.tpx3  raw000072.tpx3  raw000074.tpx3  raw000078.tpx3  raw000079.tpx3  raw000080.tpx3  raw000081.tpx3  raw000082.tpx3  raw000083.tpx3  raw000084.tpx3  raw000085.tpx3  raw000086.tpx3  raw000087.tpx3  raw000088.tpx3  raw000089.tpx3  raw000090.tpx3  raw000091.tpx3  raw000092.tpx3  raw000093.tpx3  raw000094.tpx3  raw000095.tpx3  raw000096.tpx3  raw000097.tpx3  raw000098.tpx3  raw000099.tpx3  raw000100.tpx3  raw000101.tpx3  raw000102.tpx3  raw000103.tpx3  (+101 more)
TCPFiletoStreamProcessed/: streamProcessedServer.py
TCPFiletoStreamProcessed/Files_00/: raw000000.tpx3  raw000001.tpx3  raw000002.tpx3  raw000003.tpx3  raw000004.tpx3  tdc_check_000000.tpx3  tdc_check_000003.tpx3  (+220 more)
rusty_tcp/: Cargo.toml
rusty_tcp/src/: .main.rs.un~  auxiliar.rs  chronolib.rs  clusterlib.rs  errorlib.rs  inverselib.rs  lib.rs  main.rs  packetlib.rs  postlib.rs  speclib.rs  spimlib.rs  tdclib.rs
tpx3/: Cargo.toml  build.rs
tpx3/benches/: my_benchmark.rs
tpx3/examples/: craw_coincidence.rs  craw_hyperspectral_eels.rs
tpx3/lib/: TTX.lib  instructions.txt
tpx3/src/: auxiliar.rs  clusterlib.rs  constlib.rs  errorlib.rs  external.rs  lib.rs  main.rs  packetlib.rs  postlib.rs  speclib.rs  spimlib.rs  tdclib.rs  time_shift_16.rar  time_shift_32.rar  time_shift_64.rar  time_shift_8.rar  ttx.rs
