[package]
name = "timepix3"
version = "0.8.3"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
#plotters = "^0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
debug = 1
opt-level = 3

[profile.release]
opt-level = 3
