[package]
name = "timepix3"
version = "0.9.0"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
#debuginfo-level=1
lto = "thin"
#codegen-units=1
