[package]
name = "timepix3"
version = "1.0.0"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
chrono = "0.4"
rand_distr = "0.4.3"
rand = "0.8.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
#debuginfo-level=1
lto = "thin"
#codegen-units=1
