[package]
name = "timepix3"
version = "1.0.1"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
rayon = "1.7"
chrono = "0.4"
rand_distr = "0.4.3"
rand = "0.8.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
#debuginfo-level=1
lto = "thin"
codegen-units=1
#panic = "abort"
