[package]
name = "timepix3"
version = "1.0.1"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
rayon = "1.7"
chrono = "0.4"
rand_distr = "0.4.3"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
crate-type=["rlib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
#debuginfo-level=1
lto = "thin"
codegen-units=1
#panic = "abort"
